--- a/cluster/apps/nextcloud/helm-release.yaml
+++ b/cluster/apps/nextcloud/helm-release.yaml
@@ -8,7 +8,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      # renovate: registryUrl=https://k8s-at-home.com/charts/
+      # renovate: registryUrl=https://nextcloud.github.io/helm/
       chart: nextcloud
       version: 2.10.0
       sourceRef:
