--- a/cluster/apps/nextcloud/helm-release.yaml
+++ b/cluster/apps/nextcloud/helm-release.yaml
@@ -82,27 +82,23 @@ spec:
       enabled: false
     mariadb:
       enabled: true
-      image:
-        tag: 10.5.12-debian-10-r82
-      rootUser:
-        password: "${MARIA_ROOTPASSWORD}"
-      db:
-        name: nextcloud
-        user: nextcloud
+      auth:
+        rootPassword: "${MARIA_ROOTPASSWORD}"
+        database: nextcloud
+        username: nextcloud
         password: "${NEXTCLOUD_DBPASSWORD}"
-      replication:
-        enabled: false
-      master:
+      primary:
+        updateStrategy: Recreate
         persistence:
           enabled: true
           storageClass: ssd-iscsi-democratic
           size: 2Gi
     redis:
       enabled: true
-      usePassword: true
-      password: "${NEXTCLOUD_REDISPASSWORD}"
-      cluster:
-        enabled: false
+      architecture: standalone
+      auth:
+        enabled: true
+        password: "${NEXTCLOUD_REDISPASSWORD}"
       master:
         persistence:
           enabled: false
