--- a/cluster/apps/minecraft/helm-release.yaml
+++ b/cluster/apps/minecraft/helm-release.yaml
@@ -17,7 +17,8 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
-    imageTag: java17
+    image:
+      tag: java17
     resources:
       limits:
         memory: 3500Mi
